# TP6_RayTracing

./: CMakeLists.txt  README.md
src/local/: main.cpp
src/ray_tracing/primitives/: plane.cpp  sphere.cpp
src/ray_tracing/render_engine/: render_engine.cpp  render_engine.hpp
src/ray_tracing/scene/: light.hpp  shading_parameter.cpp  shading_parameter.hpp
